--- a/example.html
+++ b/example.html
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>aframe-simple-sun-sky Primitive</title>
     <meta name="description" content="An example scene with a simple-sun-sky and some polyhedrons">
-    <script src="https://aframe.io/releases/0.8.0/aframe.min.js"></script>
-    <script src="https://cdn.rawgit.com/DougReeder/aframe-simple-sun-sky/42f84920/simple-sun-sky.js"></script>
+    <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
+    <script src="https://cdn.rawgit.com/DougReeder/aframe-simple-sun-sky/v1.1.0/simple-sun-sky.js"></script>
 </head>
 <body>
 <a-scene>
+    <a-simple-sun-sky sun-position="0.7 0.4 -1"></a-simple-sun-sky>
+
     <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
     <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
     <a-cylinder position="1 0.75 -3" radius="0.5" height="1.5" color="#FFC65D" shadow></a-cylinder>
     <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" shadow></a-plane>
-    <a-simple-sun-sky sun-position="0.7 0.4 -1"></a-simple-sun-sky>
 </a-scene>
 </body>
 </html>
