Documents & demonstrates lighting

--- a/example.html
+++ b/example.html
@@ -10,6 +10,8 @@
 <body>
 <a-scene>
     <a-simple-sun-sky sun-position="0.7 0.4 -1"></a-simple-sun-sky>
+    <a-entity light="type: ambient; color: #BBB"></a-entity>
+    <a-entity light="type: directional; color: #FFF; intensity: 0.6" position="0.7 0.4 -1"></a-entity>
 
     <a-box position="-1 0.5 -3" rotation="0 45 0" color="#4CC3D9" shadow></a-box>
     <a-sphere position="0 1.25 -5" radius="1.25" color="#EF2D5E" shadow></a-sphere>
