--- a/example.html
+++ b/example.html
@@ -6,7 +6,8 @@
     <meta name="description" content="An example scene with a simple-sun-sky and some polyhedrons">
     <script src="https://aframe.io/releases/0.8.2/aframe.min.js"></script>
     <!--<script src="simple-sun-sky.js"></script>-->
-    <script src="https://cdn.rawgit.com/DougReeder/aframe-simple-sun-sky/v1.1.1/simple-sun-sky.js"></script>
+    <script src="https://unpkg.com/aframe-simple-sun-sky@^1.2.0/simple-sun-sky.js"></script>
+    <!--<script src="https://cdn.rawgit.com/DougReeder/aframe-simple-sun-sky/v1.2.0/simple-sun-sky.js"></script>-->
     <script>
 AFRAME.registerComponent('moving-sun', {
     init: function () {
@@ -17,7 +18,7 @@ AFRAME.registerComponent('moving-sun', {
     },
 
     tick: function (time) {
-        this.positionSph.phi = Math.PI/2 + Math.sin(time / 16000 * 2 * Math.PI) * 0.6;
+        this.positionSph.phi = Math.PI * 0.4 + Math.sin(time / 16000 * 2 * Math.PI) * 0.4;
         this.positionSph.theta = Math.PI + Math.sin(time / 24000 * 2 * Math.PI) * 0.6;
         this.position.setFromSpherical(this.positionSph);
         let positionStr = this.position.x + ' ' + this.position.y + ' ' + this.position.z;
@@ -34,7 +35,7 @@ AFRAME.registerComponent('moving-sun', {
     <a-entity light="type: ambient; color: #BBB"></a-entity>
     <a-entity id="directional" light="type: directional; color: #FFF; intensity: 0.6" position="0.7 0.4 -1"></a-entity>
 
-    <a-sphere position="0 1.25 -5" radius="0.6" color="#EF2D5E" shadow></a-sphere>
+    <a-sphere position="0 1.6 -5" radius="0.6" color="#EF2D5E" shadow></a-sphere>
     <a-plane position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="#7BC8A4" opacity="0.3" transparent:true shadow></a-plane>
 </a-scene>
 </body>
